mejoras en responsive design

--- a/src/views/home.hbs
+++ b/src/views/home.hbs
@@ -1,4 +1,4 @@
-<h1 class="text-center text-5xl text-gray-800 py-16">HOME</h1>
+<h1 class="text-center text-5xl text-gray-800 py-16">HELLO!!</h1>
 
 <p class="text-center text-gray-800 text-3xl font-semibold">Welcome to my application</p>
 
