--- a/src/views/tasks/create.hbs
+++ b/src/views/tasks/create.hbs
@@ -1,4 +1,4 @@
-<div class="block mx-auto my-12 p-8 bg-white w-1/2 border border-gray-200 rounded-lg shadow-lg text-gray-800">
+<div class="block mx-auto my-12 p-8 bg-white w-1/2 border border-gray-200 rounded-lg shadow-lg text-gray-800" id="div-create">
 
   <h1 class="text-center text-3xl font-bold">Create task</h1>
 
