--- a/src/views/tasks/index.hbs
+++ b/src/views/tasks/index.hbs
@@ -4,25 +4,25 @@
     <table class="table-fixed w-full">
       <thead>
         <tr class="bg-blue-500 text-white">
-          <th class="w-20 py-4 ...">ID</th>
+          <th class="w-5 py-4 ...">ID</th>
           <th class="w-1/6 py-4 ...">Title</th>
           <th class="w-1/2 py-4 ...">Description</th>
-          <th class="w-28 py-4 ...">Actions</th>
+          <th class="w-10 py-4 ...">Actions</th>
         </tr>
       </thead>
       <tbody>
         {{#each tasks}}
         <tr>
-          <td class="py-3 px-6 text-center">{{id}}</td>
+          <td class="py-3 px-2 text-center">{{id}}</td>
           <td class="p-3 text-center">{{title}}</td>
           <td class="p-3 text-center">{{description}}</td>
-          <td class="p-3 flex justify-center">
+          <td class="p-3 px-2 flex flex-wrap justify-center">
             <form action="/tasks/delete" method="POST" class="mx-2">
               <input type="hidden" value="{{id}}" name="id">
               <button class="bg-red-500 text-white px-3 py-1 rounded-sm" type="submit">
                 <i class="fas fa-trash"></i></button>
             </form>
-            <a href="/tasks/edit/{{id}}" class="bg-gray-600 text-white px-3 py-1 rounded-sm">
+            <a href="/tasks/edit/{{id}}" class="bg-gray-600 text-white px-3 py-1 rounded-sm" id="action-edit">
               <i class="fas fa-pen"></i></a>
           </td>
         </tr>
